fixed login alignment issue in navbar

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -16,7 +16,7 @@
   list-style: none;
   display: grid;
   grid-template-columns: repeat(4, auto);
-  grid-gap: 20px;
+  /* grid-gap: 20px; */
 }
 
 .navbar-title-logo {
@@ -150,16 +150,22 @@
   }
 
   .list-item {
-    padding: 10px;
+    padding: 12.5px;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  .list-item-even {
+ .list-item-even {
     border-style: solid none solid none;
     border-color: var(--secondary-color);
-  }
+  }  
+
+  /* .list-item-odd{
+    border-style: solid none solid none;
+    border-color: var(--secondary-color);
+  } */
+  
 
   .fa-bars {
     transform: translateX(0);
